# EROM_System

./: .gitignore  README.md
backend/: .coverage  API_TEST_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_FIXES_SUMMARY.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  test_api.py
backend/apps/agents/: models.py  serializers.py  urls.py  views.py
backend/apps/agents/migrations/: 0001_initial.py
backend/apps/agents/tests/: test_models.py
backend/apps/audit/: models.py  signals.py  urls.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/core/: apps.py  authentication.py  exceptions.py  models.py  permissions.py  serializers.py  signals.py  test_factories.py  urls.py  views.py
backend/apps/core/management/commands/: create_demo_data.py  setup_shop.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/tests/: test_api.py  test_integration.py  test_models.py
backend/apps/inventory/: models.py  serializers.py  urls.py  views.py
backend/apps/inventory/migrations/: 0001_initial.py
backend/apps/inventory/tests/: test_api.py  test_models.py
backend/apps/licensing/: models.py  urls.py
backend/apps/licensing/migrations/: 0001_initial.py
backend/apps/reports/: models.py  urls.py
backend/apps/sales/: models.py  serializers.py  urls.py  views.py
backend/apps/sales/migrations/: 0001_initial.py
backend/apps/sales/tests/: test_models.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: SETUP.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
(+24 files in other folders)
